# Episim

./: CMakeCPP.cmake  CMakeConfig.cmake  CMakeReport.cmake  CNAME  GUIREADME.TXT  INSTALL.txt  Makefile  README.md  index.html  make.sh  testCliController.sh  testsummary.html
Paper_sto_spread/: main.tex
Paper_sto_spread/Influenza_A/: Influenza_A-data.txt
Paper_sto_spread/Influenza_C/: Influenza_C-data.txt
Paper_sto_spread/Measles_12/: Measles_12-data.txt
Paper_sto_spread/Measles_16/: Measles_16-data.txt
assignments/1/: WayOfWork.txt
assignments/2/: run_infl-a_nolog.xml
assignments/spread/results/InfluenzaA/data/: 100-linear-InfluenzaA-data.txt  (+3 more)
assignments/spread/seeds/: 100-linear.txt  100-noise1.txt  100-noise2.txt  100-random.txt
css/: bootstrap.min.css  custom.css
doc/doxygen_ref_man/: Doxyfile
doc/doxygen_ref_man/reference_doc_html/: graph_legend.html  index.html  navtreedata.js
doc/latex/: usermanualEpisim.tex
doc/latex_user_man/: UserManual.toc
index_files/: album.css
main/: Episim.files  Episim.includes
main/cpp/: CMakeLists.txt  Papi.cpp  qthack.h
main/cpp/RobbeGui/: QTBackEnd.cpp  QTBackEnd.h  QTCity.cpp  QTCity.h  QTCommuter.cpp  QTCommuter.h  QTCommuterModel.h
main/cpp/core/: ContactPool.cpp  ContactPool.h  DiseaseProfile.h  Infector.cpp  Infector.h
main/cpp/disease/: DiseaseSeeder.cpp  DiseaseSeeder.h  Immunizer.cpp  Immunizer.h
main/cpp/execs/: main.cpp
main/cpp/geo-gen/: GeoGrid.cpp  GeoGrid.h  Household.h
main/cpp/immunity/: Vaccinator.cpp  Vaccinator.h
main/cpp/pool/: ContactPool.cpp  ContactPool.h  ContactPoolType.h
main/cpp/pop/: Person.cpp  Person.h  PopBuilder.cpp  PopBuilder.h  Population.cpp  Population.h  SurveySeeder.cpp
main/cpp/popgen-Episim/: PopVisualiser.cpp  SandboxRobbe.cpp  main.cpp  seg_searcher.cpp
main/cpp/popgen-Episim/GenPop/: PopulationGenerator.cpp  PopulationGenerator.h
main/cpp/popgen-Episim/GeoGen/: City.cpp  City.h  Community.cpp  Community.h  CommunityType.cpp  CommunityType.h  Coordinate.cpp  Coordinate.h  DesignByContract.h  GeoGrid.cpp  GeoGrid.h  Household.cpp  Household.h  Parser.cpp  Parser.h  Utility.cpp  Utility.h  Utillity.cpp
main/cpp/popgen-Episim/GeoGen/CommunityTypes/: College.h  Community.cpp  Community.h  PrimSec.cpp  PrimSec.h  School.h
main/cpp/popgen-Episim/GeoGen/community_type/: Community.cpp  Community.h
main/cpp/popgen-Episim/GeoGen/obsolete/: College.cpp  ContactPool.cpp  ContactPool.h  PrimSec.cpp  School.cpp
main/cpp/popgen-Episim/PopGen/: PopulationGenerator.cpp  PopulationGenerator.h
main/cpp/popgen-Episim/generator/: GeoGridGenerator.cpp  GeoGridGenerator.h  PopulationGenerator.cpp  PopulationGenerator.h
main/cpp/popgen-Episim/gui/: QTBackEnd.cpp  QTBackEnd.h  QTCity.cpp  QTCity.h  QTCommunity.cpp  QTCommunity.h  QTCommuter.cpp  QTCommuter.h  QTCommuterModel.cpp  QTCommuterModel.h  QTHouseHold.cpp  QTHouseHold.h  QTPopulation.cpp  QTPopulation.h
main/cpp/popgen-Episim/mapviewer/: main.cpp  mapviewer.pro  mapviewer.qml
main/cpp/popgen-Episim/mapviewer/menus/: MainMenu.qml
main/cpp/popgen-Episim/model/: City.cpp  City.h  Community.cpp  Community.h  CommunityType.cpp  CommunityType.h  Coordinate.cpp  Coordinate.h  GeoGrid.cpp  GeoGrid.h  Household.cpp  Household.h
main/cpp/popgen-Episim/util/: DesignByContract.h  GeoGridFileWriter.cpp  GeoGridFileWriter.h  Parser.cpp  Parser.h  TestSummarizer.cpp  TestSummarizer.h  Utility.cpp  Utility.h
main/cpp/sim/: CliController.cpp  CliController.h  Sim.cpp  Sim.h  SimBuilder.cpp  SimBuilder.h  SimRunner.cpp  SimRunner.h  Simulator.h  SimulatorBuilder.cpp  SimulatorBuilder.h  StrideRunner.cpp  StrideRunner.h  main.cpp
main/cpp/sim/event/: Subject.h
main/cpp/sim/python/: StrideRunner.cpp  StrideRunner.h
main/cpp/util/: CSV.cpp  CSV.h  Misc.h  RNManager.cpp  RNManager.h  Safeline.cpp  Safeline.h  SegmentedVector.h
main/cpp/viewers/: CliViewer.h  MapViewer.cpp  MapViewer.h
main/python/examples/: CMakeLists.txt  seedGenerator.py  seedTester.py
main/python/examples/config/: default_seeds.txt
main/python/pystride/: Simulation.py
main/python/swig/: population.i
main/resources/: CMakeLists.txt
main/resources/EpiSim-test-files/config/: bad_active_frac_0.xml  bad_active_frac_1.xml  bad_community_sizes.xml  bad_contactpool_size.xml  bad_stucom_frac_0.xml  bad_stucom_frac_1.xml  bad_student_frac_0.xml  bad_student_frac_1.xml  bad_total_frac.xml  bad_workcom_frac_0.xml  bad_workcom_frac_1.xml  geogen_default.xml  run_default_test.xml  schools&colleges_bad_frac_0.xml  schools&colleges_bad_frac_1.xml
main/resources/config/: geogen_default.xml  geogen_short.xml  geogen_test.xml  geogen_test_school.xml  geogen_workplace_test.xml  run_default.xml  run_default_nolog.xml  run_random-geopop.xml  run_short.xml
main/resources/data/: flanders_cities_faulty_col.csv  flanders_cities_faulty_row.csv  geogen_default.xml  geogen_test_cities.csv  test_commuting.csv
main/resources/lib/: CMakeLists.txt
main/resources/mapviewer/: Checker.qml  Config_pop.qml  Config_sim.qml  File_select.qml  Gui.qml  Map_rect.qml  Spnner_label.qml  mapviewer.qml
main/resources/mapviewer/custom/: CityCircle.qml  FlexRectangle.qml  GUIController.qml  PathDraw.qml
main/resources/mapviewer/map/: MapComponent.qml
main/resources/mapviewer/menus/: MainMenu.qml
resources/cmake/: CMakeLocal.cmake  FindPAPI.cmake
study/: plan_case_study.docx
task-distributions/: deadline_03-06.txt  deadline_06-05.txt  deadline_13-05.txt  deadline_20-5.txt  deadline_29-04.txt
test/: CMakeLists.txt
test/cpp/gtester/: BatchRuns.cpp  CMakeLists.txt  GenerateCommunityTest.cpp  GeoGenTests.cpp  ParallelRuns.cpp  ScenarioData.cpp
test/cpp/gtester/EpiSim-tests/: Defrag-Cities-Test.cpp  Generate-Colleges-Test.cpp  Generate-Community-Test.cpp  Generate-Schools-Test.cpp  Generate-Workplaces-Test.cpp  GenerateCollegesTest.cpp  GeneratePopTest.cpp  GeoGen-Constructor-Test.cpp  GeoGenConConstructorTests.cpp  GeoGrid-Constructor-Test.cpp
test/cpp/myhayai/episim-bench/: CMakeLists.txt  class_delivery.cpp  flex_delivery.cpp  main.cpp
(+8 files in other folders)
